readme update and spacing fix

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ justify-content: left;
         line-height: 1.5;
         padding: 0 10px; 
         text-align: center;
-        letter-spacing: 90%;
+        /* letter-spacing: 90%; */
     }
     .btn {
         padding: 10px 15px;
